# gl261-benchmark

./: .gitignore  README.md  download.py  evaluate.py  prepare.py  prepare_coco.py  pyproject.toml  train.py
gl261/: __init__.py  dataset.py  metrics.py
splits/: v2.1.json
tests/: test_download.py  test_metrics.py
